[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/adScreen/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://audio/effects/menu_move.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/effects/menu_select.wav" type="AudioStream" id=3]
[ext_resource path="res://Design and Prototypes/MainMenu_original.png" type="Texture" id=4]
[ext_resource path="res://Design and Prototypes/Patreon_logo.png" type="Texture" id=5]
[ext_resource path="res://Design and Prototypes/twitch_PNG22.png" type="Texture" id=6]
[ext_resource path="res://Design and Prototypes/twitterlogo_1x.png" type="Texture" id=7]
[ext_resource path="res://Design and Prototypes/MainMenu_pettles.png" type="Texture" id=8]
[ext_resource path="res://Design and Prototypes/fade.png" type="Texture" id=9]
[ext_resource path="res://Design and Prototypes/title_anim_demo.png" type="Texture" id=10]
[ext_resource path="res://Design and Prototypes/twitchlink.png" type="Texture" id=11]
[ext_resource path="res://Design and Prototypes/patreonlink.png" type="Texture" id=12]
[ext_resource path="res://Design and Prototypes/twitterlink.png" type="Texture" id=13]

[sub_resource type="Animation" id=1]

resource_name = "New Anim"
length = 6.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.75, 1, 1.5, 2.25, 2.5, 3, 3.75, 4, 4.5, 5.25, 5.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]

resource_name = "start"
length = 1.0
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.1, 0.1 ) ]
}

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="menu_move" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="menu_select" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = -15.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Sprite" type="Sprite" parent="." index="2"]

texture = ExtResource( 4 )
centered = false
hframes = 6
_sections_unfolded = [ "Animation" ]

[node name="patreonButton" type="TextureButton" parent="Sprite" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 362.0
margin_top = 252.0
margin_right = 378.0
margin_bottom = 268.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="twitchButton" type="TextureButton" parent="Sprite" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 362.0
margin_top = 234.0
margin_right = 378.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="twitterButton" type="TextureButton" parent="Sprite" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 362.0
margin_top = 270.0
margin_right = 378.0
margin_bottom = 286.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Sprite2" type="Sprite" parent="." index="3"]

texture = ExtResource( 8 )
centered = false
hframes = 6
_sections_unfolded = [ "Animation", "Offset" ]

[node name="Sprite3" type="Sprite" parent="." index="4"]

visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -90.9393, -3.05463 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Offset", "Region", "Visibility" ]

[node name="Camera2D" type="Camera2D" parent="." index="5"]

position = Vector2( 255.499, 143.171 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.4, 0.4 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Offset", "Smoothing" ]

[node name="Sprite4" type="Sprite" parent="." index="6"]

position = Vector2( 0, 10.084 )
texture = ExtResource( 10 )
centered = false
offset = Vector2( 105, 0 )
_sections_unfolded = [ "Offset", "Region", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/New Anim" = SubResource( 1 )
blend_times = [  ]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="." index="8"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/start = SubResource( 2 )
blend_times = [  ]

[node name="Sprite5" type="Sprite" parent="." index="9"]

visible = false
position = Vector2( 444.586, 240.32 )
texture = ExtResource( 11 )

[node name="Sprite6" type="Sprite" parent="." index="10"]

visible = false
position = Vector2( 444.586, 260.536 )
texture = ExtResource( 12 )

[node name="Sprite7" type="Sprite" parent="." index="11"]

visible = false
position = Vector2( 444.586, 277.421 )
texture = ExtResource( 13 )

[connection signal="pressed" from="Sprite/patreonButton" to="." method="_on_patreonButton_pressed"]

[connection signal="pressed" from="Sprite/twitchButton" to="." method="_on_twitchButton_pressed"]

[connection signal="pressed" from="Sprite/twitterButton" to="." method="_on_twitterButton_pressed"]

[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]


